# drop-reverse-proxy

./: Cargo.toml  app.properties  app.toml
local-dev/database/: docker-compose.yml
src/: lib.rs  main.rs  repository.rs  service.rs
src/config/: db.rs
src/repository/: artist.rs  drop.rs  mod.rs  playlist.rs  tag.rs
src/service/: drop.rs
tests/: artist_repository_integration_tests.rs  drop_repository_integration_tests.rs  integration_tests.rs  mock.rs  playlist_repository_integration_tests.rs  repository_integration_tests.rs  service.rs  unit_tests.rs  utils.rs
tests/mock/: repository.rs
tests/mock/repository/: artist.rs  drop.rs  playlist.rs
tests/resources/: Dockerfile  get_vhost_conf.sh  launch_dockerfile.sh
tests/resources/apache/: Dockerfile  get_conf.sh  httpd-vhosts.conf
tests/resources/apache/tag/xurnxenyoawltkky/: playlist.m3u8
tests/resources/conf/ok/: app.toml
tests/resources/import_path/untar_drop/ok/drop_ok/: drop.txt
tests/resources/tag/jdznjevb/: index.html  playlist.m3u8
tests/resources/tag/xurnxenyoawltkky/: index.html
tests/service/: drop.rs  drop_int.rs
utils/local-docker/: redis.yml
