[package]
name = "drop-reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
tokio = { version = "1.48.0", features = ["full"] }
http-body-util = "0.1.3"
tower = "0.5.2"
serde_json = "1.0.145"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
redis = { version = "0.25" }
