[package]
name = "drop-reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
tokio = { version = "1.48.0", features = ["full"] }
http-body-util = "0.1.3"
tower = "0.5.2"
serde_json = "1.0.145"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
redis = { version = "0.25" }
derive-new = "0.5"
reqwest = { version = "0.12", features = ["json"] }
figment = { version = "0.10.19", features = ["toml"] }
flate2 = "1.1.5"
tar = "0.4.44"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono" ] }
tracing = "0.1.41"
async-trait = "0.1"
tempfile = "3.25.0"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
